# vartypes

./: .travis.yml  CMakeLists.txt  appveyor.yml  travis.yml
example/src/: mainwindow.h
vartypes/primitives/: VarType.cpp
